--- a/app/assets/stylesheets/developements.scss
+++ b/app/assets/stylesheets/developements.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Developpements controller here.
+// Place all the styles related to the Developements controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
