--- a/app/views/developements/index.html.erb
+++ b/app/views/developements/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= developement.developmentDate %></td>
         <td><%= developement.website %></td>
         <td><%= developement.description %></td>
-        <td><%= developement.type %></td>
+        <td><%= developement.mtype %></td>
         <td><%= link_to 'Show', developement %></td>
         <td><%= link_to 'Edit', edit_developement_path(developement) %></td>
         <td><%= link_to 'Destroy', developement, method: :delete, data: { confirm: 'Are you sure?' } %></td>
