--- a/app/views/developements/show.html.erb
+++ b/app/views/developements/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @developement.type %>
+  <%= @developement.mtype %>
 </p>
 
 <%= link_to 'Edit', edit_developement_path(@developement) %> |
