--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <%= link_to "Expériences", experiences_path %>
   <%= link_to "Formation", trainings_path %>
   <%= link_to "Developement", developements_path %>
+  <%= link_to "Contact", new_contact_path %>
   
 
   <body>
