--- a/app/views/developements/_form.html.erb
+++ b/app/views/developements/_form.html.erb
@@ -32,8 +32,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.number_field :type %>
+    <%= form.label :mtype %>
+    <%= form.number_field :mtype %>
   </div>
 
   <div class="actions">
