--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,30 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Homes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Website</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
     <% @homes.each do |home| %>
-      <tr>
-        <td><%= home.title %></td>
-        <td><%= home.website %></td>
-        <td><%= home.description %></td>
+      <h1><%= home.title %></1>
+      <p><td><%= home.description %></p>
+      <table>
         <td><%= link_to 'Show', home %></td>
         <td><%= link_to 'Edit', edit_home_path(home) %></td>
         <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      </table>
     <% end %>
   </tbody>
-</table>
+
 
 <br>
 
