--- a/app/assets/stylesheets/avahomes.scss
+++ b/app/assets/stylesheets/avahomes.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the developementAvatars controller here.
+// Place all the styles related to the avahomes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
