--- a/app/assets/stylesheets/avatrains.scss
+++ b/app/assets/stylesheets/avatrains.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the trainingAvatars controller here.
+// Place all the styles related to the avatrains controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
