--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -2,34 +2,22 @@
 
 <h1>Experiences</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Businessname</th>
-      <th>Work</th>
-      <th>Date</th>
-      <th>Website</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
+    <%= link_to 'New Experience', new_experience_path %>
     <% @experiences.each do |experience| %>
-      <tr>
-        <td><%= experience.businessName %></td>
-        <td><%= experience.work %></td>
-        <td><%= experience.date %></td>
-        <td><%= experience.website %></td>
-        <td><%= experience.description %></td>
-        <td><%= link_to 'Show', experience %></td>
-        <td><%= link_to 'Edit', edit_experience_path(experience) %></td>
-        <td><%= link_to 'Destroy', experience, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+
+      <h1><a href=<%= experience.website %>><%= experience.businessName %></a></h1>
+      <h2><%= experience.work %></h2>
+      <h3><%= experience.date %></h3>
+      <p><%= experience.description %></p>
+      <table>
+        <tr>
+          <td><%= link_to 'Show', experience %></td>
+          <td><%= link_to 'Edit', edit_experience_path(experience) %></td>
+          <td><%= link_to 'Destroy', experience, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      </table>
     <% end %>
   </tbody>
-</table>
 
-<br>
 
-<%= link_to 'New Experience', new_experience_path %>
