--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -2,34 +2,19 @@
 
 <h1>Trainings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Trainingcenter</th>
-      <th>Date</th>
-      <th>Website</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @trainings.each do |training| %>
+<tbody>
+  <%= link_to 'New Training', new_training_path %>
+  <% @trainings.each do |training| %>
+    <h1><a href=<%= training.website %>><%= training.title %></a></h1>
+    <h2><%= training.trainingCenter %></h2>
+    <h3><%= training.date %></h3>
+    <p><%= training.description %></p>
+    <table>
       <tr>
-        <td><%= training.title %></td>
-        <td><%= training.trainingCenter %></td>
-        <td><%= training.date %></td>
-        <td><%= training.website %></td>
-        <td><%= training.description %></td>
         <td><%= link_to 'Show', training %></td>
         <td><%= link_to 'Edit', edit_training_path(training) %></td>
         <td><%= link_to 'Destroy', training, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Training', new_training_path %>
+    </table>
+  <% end %>
+</tbody>
