--- a/app/views/developements/index.html.erb
+++ b/app/views/developements/index.html.erb
@@ -2,34 +2,18 @@
 
 <h1>Developements</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Developmentdate</th>
-      <th>Website</th>
-      <th>Description</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @developements.each do |developement| %>
+<tbody>
+  <%= link_to 'New Developement', new_developement_path %>
+  <% @developements.each do |developement| %>
+    <h1><a href=<%= developement.website %>><%= developement.title %></a></h1>   
+    <h2><%= developement.developmentDate %></h2>
+    <p><%= developement.description %></p>
+    <h3><%= developement.mtype %></h3>
       <tr>
-        <td><%= developement.title %></td>
-        <td><%= developement.developmentDate %></td>
-        <td><%= developement.website %></td>
-        <td><%= developement.description %></td>
-        <td><%= developement.mtype %></td>
         <td><%= link_to 'Show', developement %></td>
         <td><%= link_to 'Edit', edit_developement_path(developement) %></td>
         <td><%= link_to 'Destroy', developement, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Developement', new_developement_path %>
+    </table>
+  <% end %>
+</tbody>
