call asset in vendor

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,15 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-  <tbody>
-    <br>
-    <%= link_to 'New Home', new_home_path %>
-    <% @homes.each do |home| %>
-      <h1><a href=<%= home.website %>><%= home.title %></a></h1>
-      <p><td><%= home.description %></p>
-      <table>
-        <td><%= link_to 'Show', home %></td>
-        <td><%= link_to 'Edit', edit_home_path(home) %></td>
-        <td><%= link_to 'Destroy', home, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </table>
-    <% end %>
-  </tbody>
+<h1>test</h1>
