--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,1 +1,21 @@
-<h1>test</h1>
+<section class="hero hero-with-header separator-bottom">
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="font-weight-bold">Footers</h1>
+      <p>Use tabs to see different variations of some components.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb breadcrumb-custom">
+          <li class="breadcrumb-item"><a href="/">Home</a></li>
+          <li class="breadcrumb-item"><a href="/components/">Components</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Footers</li>
+        </ol>
+      </nav>
+    </div>
+  </div>
+</div>    
+</section>
